<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="HardcodedText">

    <Button
      android:id="@+id/send_event_button"
      style="@style/DroidboyOutlinedButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="20dp"
      android:text="@string/ecommerce_send_event" />

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_alignParentTop="true"
      android:layout_above="@id/send_event_button"
      android:fillViewport="true">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:paddingStart="20dp"
          android:paddingTop="20dp"
          android:paddingEnd="20dp"
          android:paddingBottom="20dp">

            <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:fontFamily="@font/sailec_bold"
              android:text="@string/ecommerce_events_header" />

            <View
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:layout_marginTop="15dp"
              android:layout_marginBottom="15dp"
              android:background="?android:attr/listDivider" />

            <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/event_type_spinner_layout"
              style="@style/DroidboyOutlinedBox"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/ecommerce_event_type_hint">

                <Spinner
                  android:id="@+id/event_type_spinner"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingStart="8dp"
                  android:paddingTop="12dp"
                  android:paddingEnd="8dp"
                  android:paddingBottom="12dp"
                  android:spinnerMode="dropdown" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:layout_marginTop="15dp"
              android:layout_marginBottom="15dp"
              android:background="?android:attr/listDivider" />

            <LinearLayout
              android:id="@+id/property_fields_container"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
